tests/ui/closures/issue-67123.rs
fn foo<T>(t: T) {
    || { t; t; }; //~ ERROR: use of moved value
}

fn main() {}
